--- a/anthony-yannick/styles/base.css
+++ b/anthony-yannick/styles/base.css
@@ -1,4 +1,4 @@
-@media screen and (min-width:768px) {
+/* @media screen and (min-width:768px) {
  
 }
 
@@ -15,4 +15,4 @@ h1 {
  font-weight: bold;
  padding-top: 30px;
  padding-bottom: 30px;
-}
+} */
