--- a/anthony-yannick/styles/layout.css
+++ b/anthony-yannick/styles/layout.css
@@ -1,58 +1,74 @@
-.site-header {
-  background-color: #FFEAA9;
+*{
+  box-sizing: border-box;
+}
+body{
+  margin:0;
+}
+.heading-group-h1{
   font-family: sans-serif;
-  margin: 0 auto;
-  padding:15px;
-  /* padding-bottom:50px; */
+  text-align: left;
+  background-color: khaki;
+  padding: 1em;
+  margin-bottom: -4em;
 }
-
-.clearfix {
-  overflow: hidden;
+h2{
+  font-size: 1em;
 }
-
-h1 {
-  font-size: 2em;
-  font-weight: bold;
-  
-  padding-top: 30px;
-  padding-bottom: 30px;
+.main-nav{
+  background-color: khaki;
+  padding: 1em;
+  padding-bottom: 0;
 }
-
-h2 {
-  font-size: 1.5em;
-  font-weight: bold;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.main-nav {
-  position: absolute;
-  /* display:block; */
-}
-
-.icon-menu{
-  position: fixed;
-  right: 0px;
-  top: 0px;
-  font-size: 3em;
+.main-nav a {
   text-decoration: none;
+  color: gray;
 }
-
-.main-nav ul {
-  /*position: relative;*/
-  margin-left: 15px;
+.icon-menu {
+  display: none;
 }
-
-
-
+@media only screen and (max-width: 640px) {
+  .icon-menu {
+    display: inline-block;
+    float: right; 
+    margin-top: -2em;
+    font-size: 3em;
+  }
+  .icon-menu:hover + ul {
+    display:block;
+  }
+  .main-nav ul{ 
+    display: none;
+  }
+  main {
+    padding-top: 3em;
+  }
+}
+.main-nav ul{
+  list-style-type: none;
+  margin-left: -2em;
+  text-align: left;
+}
 .main-nav ul li {
-  float:left;
+  display: inline-block; 
+  padding: 1em;
+}
+main{
+  padding-left: 1em;
+  padding-right: 1em;
+}
+address {
+  display: inline;
+}
+address a{
+  text-decoration: none;
   color: gray;
 }
-
-.main-nav ul li a {
+.byline {
   color: gray;
-  text-decoration: none;
-  font-size: 1.5em;
-  padding-left:7px;
+}
+.pull-right{
+  float: right;
+}
+img {
+  max-width: 100%;
 }
