--- a/anthony-yannick/styles/modules.css
+++ b/anthony-yannick/styles/modules.css
@@ -1,4 +1,4 @@
-main {
+/* main {
   padding:15px;
 }
 
@@ -20,4 +20,4 @@ main {
   color: gray;
   font-style: italic;
   font-weight: bold;
-}
+} */
